<resources>
    <string name="app_name">BMI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Patients</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_enter_password">Enter Password</string>
    <string name="action_email">Email Address</string>
    <string name="action_lastname">Last Name</string>
    <string name="action_firstname">First Name</string>
    <string name="action_signup">Registration</string>
    <string name="action_submit">Submit</string>
    <string name="action_register">Not yet a member? Create Account</string>
    <string name="action_gender">Gender</string>
    <string name="action_dob">Date of Birth</string>
    <string name="action_date">Date</string>
    <string name="action_status">Status</string>
    <string name="action_age">Age</string>
    <string name="action_name">Patient Name</string>
    <string name="action_unique">Unique Code</string>
    <string name="action_reg_date">Registration Date</string>
    <string name="action_vitals">Vitals Form</string>
    <string name="action_patient">Patient Name</string>
    <string name="action_visit_date">Visit Date</string>
    <string name="action_height">Height in (M)</string>
    <string name="action_weight">Weight in (Kgs)</string>
    <string name="action_bmi">BMI</string>
    <string name="action_visit_a">Visit A</string>
    <string name="action_visit_b">Visit B</string>
    <string name="action_general">General Health</string>
    <string name="action_good">Good</string>
    <string name="action_poor">Poor</string>
    <string name="action_diet">Have you been on diet to loose weight?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_comment">Enter Comment</string>
    <string name="action_drugs">Are you currently taking any drugs?</string>
    <string name="action_date_of">Date of Birth</string>
    <string name="action_member">Member Since</string>
    <string name="action_name_user">Full Name</string>
    <string name="action_logout">Logout</string>
</resources>