<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/action_name_user"
            app:boxStrokeColor="@color/purple_200"
            app:hintTextColor="@color/purple_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:inputType="text"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/action_email"
            app:boxStrokeColor="@color/purple_200"
            app:hintTextColor="@color/purple_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:inputType="text"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/action_member"
            app:boxStrokeColor="@color/purple_200"
            app:hintTextColor="@color/purple_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_joined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:inputType="text"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/action_logout"
            app:cornerRadius="35dp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>